# stasis

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: deploy.yml
scripts/: media_bridge_host.py
src/: cli.rs  client.rs  daemon.rs  log.rs  main.rs  media_bridge.rs
src/config/: info.rs  parser.rs
src/core/events/: handlers.rs
src/core/manager/: action_queue.rs  actions.rs  brightness.rs  helpers.rs  idle_loops.rs  inhibitors.rs  mod.rs  state.rs  tasks.rs
src/core/services/: app_inhibit.rs  browser_media.rs  dbus.rs  input.rs  media.rs  power_detection.rs  wayland.rs
src/ipc/: commands.rs  mod.rs
systemd/: stasis.service
website/: package.json  svelte.config.js
website/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
website/src/: app.css  app.html
website/src/lib/components/: CodeBlock.svelte  Footer.svelte  TopBar.svelte
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/configuration/: +page.svelte
website/src/routes/contributing/: +page.svelte
website/src/routes/faq/: +page.svelte
website/src/routes/integration/: +page.svelte
website/src/routes/quick-start/: +page.svelte
