[package]
name = "stasis"
version = "0.7.5"
edition = "2024"
authors = ["Dustin Pilgrim <dustin.pilgrim1997@gmail.com>"]
description = "A lightweight, Feature Rich Wayland idle manager written in Rust."
license = "MIT"
readme = "README.md"
repository = "https://github.com/saltnpepper97/stasis"
keywords = ["wayland", "idle", "manager", "rust", "linux"]
categories = ["command-line-utilities", "os::linux-apis"]
exclude = ["/.github", "/target", "/.idea", "/.vscode", "Cargo.lock"]

[profile.dev]
opt-level = 2

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
ctrlc = "3.5.1"
dirs = "6.0.0"
eyre = "0.6.12"
futures = "0.3.31"
futures-util = "0.3.31"
input = "0.9.1"
libc = "0.2.177"
mpris = "2.0.1"
once_cell = "1.21.3"
procfs = "0.18.0"
regex = "1.12.2"
rune-cfg = "0.2.0"
serde_json = "1.0.145"
signal-hook = "0.3.18"
tokio = { version = "1.48.0", features = ["full"] }
wayland-client = "0.31.11"
wayland-protocols = { version = "0.32.9", features = ["client", "unstable", "staging"] }
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
zbus = { version = "5.12.0", features = ["tokio"] }
zbus_macros = "5.12.0"
zvariant = "5.8.0"
